# test

./: CMakeLists.txt
.github/workflows/: build-server.yml  cmake-multi-platform.yml
Server/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  config.json  main.cc  pch.h  schema.sql  vcpkg-configuration.json  vcpkg.json
Server/config/: config.h.in
Server/controllers/: Auth.cc  Auth.h  ChatSocketController.cc  ChatSocketController.h  EntryController.cc  EntryController.h  Messages.cc  Messages.h  RoomMembers.cc  RoomMembers.h  Rooms.cc  Rooms.h  Users.cc  Users.h
Server/filters/: AdminCoroFilter.cc  AdminCoroFilter.h  AuthenticationCoroFilter.cc  AuthenticationCoroFilter.h
Server/models/: CommonRoomsView.cc  CommonRoomsView.h  Helper.h  Helper.inl  JoinedRoomsView.cc  JoinedRoomsView.h  Message.cc  Message.h  Room.cc  Room.h  RoomMembership.cc  RoomMembership.h  User.cc  User.h  UserRoomsWithMessagesView.cc  UserRoomsWithMessagesView.h  model.json
Server/overlay-ports/botan/: fix-cmake-usage.patch  portfile.cmake
Server/plugins/: JwtTokenManager.cc  JwtTokenManager.h  PasswordHasher.cc  PasswordHasher.h  RedisManager.cc  RedisManager.h
Server/utilities/: FormatterUtil.h  HttpRequestUtil.h  HttpResponseUtil.h
